[package]
name = "boi"
version = "0.1.0"
description = "Manage backups with Borg"
repository = "https://github.com/featherbread/boi"
authors = ["Alex Hamlin <alex@alexhamlin.co>"]
edition = "2024"

[features]
default = ["upload"]
upload = ["dep:url"]

[dependencies]
clap_complete = "4"
futures = "0.3"
libc = "0.2"
serde = "1"
serde_derive = "1"
serde_json = "1"
url = { version = "2", optional = true }

[dependencies.clap]
version = "4"
default-features = false
features = [
    "std",
    "cargo",
    "derive",
    "help",
    "usage",
]

[dependencies.indicatif]
version = "0.18"
default-features = false
features = [
    "unicode-width",
]

[dependencies.tokio]
version = "1"
features = [
    "fs",
    "io-std",
    "io-util",
    "macros",
    "process",
    "rt",
    "signal",
    "time",
]

[dependencies.tokio-util]
version = "0.7"
features = [
    "io",
    "io-util",
]
